<resources>
    <string name="app_name">AR_Apteczka</string>
    <string name="nameOfApplications">Twoja apteczka</string>
    <string name="chooseMed">Proszę wybrać lek z apteczki</string>
    <string name="chooseDose">Proszę wpisać zażywaną dawkę leku</string>
    <string name="chooseTimeOfDay">Proszę wybrać porę dnia</string>
    <string name="chooseAterBeforeMeal">Proszę wpisać porę posiłku</string>
    <string name="choosehourReminder">Proszę wpisać godzinę przypomnienia</string>
    <string name="chooseReminder">Ustaw przypomnienie</string>
    <string name="attention">Uwaga!</string>
    <string name="attentiontoAddMedicine">Uwaga</string>
    <string name="fillTheData">Uzupełnij brakujące dane!</string>
    <string name="back">Wróć</string>
    <string name="infortionMedicinWasAdded">Lek został dodany</string>
    <string name="attentionToUpdateMedicine">Lek został zaktualizowany</string>
    <string name="AlertDialogAttentionAreYouSure">Czy jesteś pewien!</string>
    <string name="AlertDialogQuestion">Czy chcesz usunąć ten lek?</string>
    <string name="AlertDialogYes">Tak</string>
    <string name="AlertDialogNo">Nie</string>
    <string name="AttentionToRemoveMedicine">Lek został usunięty</string>
    <string name="TakeMedOccurAttention">Uwaga!</string>
    <string name="TakeMedOccurInformation">Uzupełnij brakujące dane!</string>
    <string name="TakeMedOccurBack">Wróć</string>
    <string name="TakeMedOccurMedAdded">Lek został dodany</string>
    <string name="DoseUpdateInformation">Dawka została zaktualizowana</string>
    <string name="RemoveTakeMedOccurAlertTitle">Czy jesteś pewien!</string>
    <string name="AlertDialogMessage">Czy chcesz usunąć ten lek?</string>
    <string name="AlertDialogRemoveTakeMedOccurYes">Tak</string>
    <string name="AlertDialogRemoveTakeMedOccurNo">Nie</string>
    <string name="UpdateRemoveMenuRemoveAttention">Lek został usunięty</string>
    <string name="Morning">Rano</string>
    <string name="Midday">Popołudnie</string>
    <string name="Evening">Wieczór</string>
    <string name="ActivityAddMedicineTypeCountAttention">Musisz podać ilość posiadanych sztuk leku</string>
    <string name="ActivityAddMedicineWriteMedName">Wpisz nazwę leku</string>
    <string name="ActivityAddMedcineAddKind">Wpisz rodzaj leku</string>
    <string name="ActivityAddMedicineWriteCount">Ilość sztuk leku</string>
    <string name="ActivityAddMedicineWriteDescription">Informacje</string>
    <string name="ActivityAddMedicineNameInformation">Musisz podać nazwę leku</string>
    <string name="ActivityAddMedicineKidInformation">Musisz podać rodzaj leku</string>
    <string name="ActivityAddMedicineActiveDose">Podaj dawkę czynną w mg</string>
    <string name="UpdateCountMedicinesTitleAlert">Niepoprawne dane</string>
    <string name="UpdateCountMedicinesMessageAlert">Podaj prawidłową liczbę</string>
    <string name="ActivityMorningMedicines">Leki poranne</string>
    <string name="ActivityAfternoonMedicines">Leki popołudniowe</string>
    <string name="ActivityEveningMedicines">Leki wieczorne</string>
    <string name="ActivityCardViewMdicineName">Nazwa leku</string>
    <string name="ActivityCardViewMedicineKind">Rodzaj</string>
    <string name="ActivityUpdateCountMedicinesInfromation">Wpisz nową ilość tabletek</string>
    <string name="ActivityUpdateDoseMedInformation">Wpisz nową dawkę leku</string>
    <string name="ActivityDose">Dawka</string>
    <string name="ActivityTimeOfDay">Pora posiłku</string>
    <string name="ActivityDosetoTakeText">Zażywana dawka tabletek</string>
    <string name="ActivityTimeDay">Pora dnia</string>
    <string name="ActivityNoDescrpition">Brak</string>
    <string name="ActivityInformationAbotCountMedicine">Ilość posiadanych sztuk:</string>
    <string name="ActivityActiveDoseInformation">Możesz podać dawke czynną</string>
    <string name="ActivityDescriptionInformation">Możesz podać opis</string>
    <string name="ActivityAllYourMedicineTitle">Wszystkie twoje leki</string>
    <string name="informAboutMediciesToshowMoreInformations">Naciśnij na lek, aby edytować</string>
    <string name="notificationCount_information">Podaj ilość leku, poniżej której zostanie zgłoszone powiadomienie
    </string>
    <string name="NotificationSuccessToast">Dodano lek oraz powiadomienie o małej ilości leku</string>
    <string name="TitleNotificationAmoundMed">Mała ilość lekarstw</string>
    <string name="alertNotificationBackTitle">Czy na pewno chcesz cofnąć</string>
    <string name="alertNotificationBackMessage">Jeżel cofniesz zostanie zapisany lek, ale bez powiadomienia o małej
        ilości leku
    </string>
    <string name="ToastMedicineAddedWithoutNotification">Lek został dodany, bez powiadomienia o małej ilości leku
    </string>
    <string name="InformationAboutDateAndDays">Wybierz datę oraz okres zażywania lekarstwa licząc od daty początkowej
    </string>
    <string name="alertDialogTileMedExists">Nie można dodać leku</string>
    <string name="alertDialogMessageMedExists">Lek o podanej nazwie i dawce aktywnej już istnieje</string>
    <string name="alertDialogBack">Wróć</string>
    <string name="whichActionADD">ADD</string>
    <string name="whichActionUPDATE">UPDATE</string>
    <string name="ToastAddNotification">Dodano powiadomienie</string>
    <string name="ToastUpdateNotification">Edytowano powiadomienie</string>
    <string name="alertDialogTitleNullAmount">Uzupełnij brakujące dane</string>
    <string name="alertDialogMessageNullAmount">Podaj ilość sztuk leku, poniżej których ma nastąpić powiadomienie</string>
    <string name="alertDialogTitleRemoveNotification">Czy chcesz usunąć przypomnienie?</string>
    <string name="ToastRemoveNotification">Usunięto przypomnienie</string>
    <string name="alertDialogTitleLackOfNotification">Nie można usunąć przypomnienia</string>
    <string name="alertDialogMessageLackOfNotification">Ten lek nie posiada przypomnienia</string>
    <string name="alertDialogTitleCannotRemoveMed">Nie można usunąć leku</string>
    <string name="alertDialogMessageCannotRemoveMedicine">Ten lek aktualnie zażywasz. Nie możesz go usunąć.</string>
    <string name="alertDialogTitleNoDataStart">Nieprawidłowa data</string>
    <string name="alertDialogMessageNoDataStart">Musisz podać datę początkową oraz ilość dni przez które dany lek będzie zażywany</string>
    <string name="validationDataDateAndPeriodOfTaken">Musisz wybrać datę początkową i okres brania, aby obliczyć datę końcową</string>
    <string name="validationDataPeriodOfTaken">Musisz wybrać okres brania, aby obliczyć datę końcową</string>
    <string name="validationDataDateStart">Musisz wybrać datę początkową, aby obliczyć datę końcową</string>
    <string name="onTextChangedDateAndPeriogOfTaken">Musisz wybrać datę początkową i okres brania, aby obliczyć datę końcową</string>
    <string name="onTextChangedDateStart">Musisz wybrać datę początkową, aby obliczyć datę końcową</string>
    <string name="chooseDate">Wybierz datę</string>
    <string name="alertDialogTitleTime">Czy jesteś pewien wyboru godziny?</string>
    <string name="OK">OK</string>
    <string name="correctFormMorning">rano</string>
    <string name="correctFormMidday">po południu</string>
    <string name="correctFormEvening">wieczorem</string>
    <string name="ToastAddMedicineWithoutReminder">Lek został dodany, lecz bez przypominajki</string>
    <string name="alertDialogTitleBackAddNotification">Jeżeli cofniesz zostanie zapisany lek bez przypominajki</string>
    <string name="alertDialogTitleLackOfTime">Nie wybrano godziny</string>
    <string name="alerDialogMessageLackOfTime">Naciśnij przycisk ustaw godzinę, aby dodać przypominajkę.</string>
    <string name="chooseTime">Wybrana godzina</string>
    <string name="ToastExtendedPeriodOfTakingMed">Wydłużono okres zażywania leku</string>
    <string name="shortenedExtendedPeriodOfTakigMed">Skrócono czas zażywania lekarstwa</string>
    <string name="alertDialogTitleTheSameDate">Wybrana data jest nieprawidłowa</string>
    <string name="alertDialogMessageTheSameDate">Nowa data nie różni się od obecnej daty zakończeia brania leku</string>
    <string name="alertDialogTitleWrongDate">Wybrana data jest nieprawidłowa</string>
    <string name="alertDialogMessageWrongDate">Nowa data zażywania leku jest mniejsza od dzisiejszej daty</string>
    <string name="alertDialogTitleTakeMedicine">Czy zażyłeś lek</string>
    <string name="alertDialogMessageTakeMedicine">Zażycie leku spowoduje usunięcie go z listy leków na dziś</string>
    <string name="alertDailogTitleNotEnoughMedicine">Nie można zażyć leku</string>
    <string name="alertDialogMessageNotEnoughMedicine">Zażywana dawka przekracza sztuki leku w elektronicznej apteczce. Musisz uzupełnić sztuki leku</string>
    <string name="ToastTakeMedicine">Zażyłeś lek</string>
    <string name="LackOfMedicineRecyclerView">Brak leków Przejdź do zakładki dodaj lek.</string>
    <string name="textAboutLackOfMorningMedicines">Brak porannych leków</string>
    <string name="textAboutLackOfAfternoonMedicines">Brak popołudniowych leków</string>
    <string name="textAboutLackOfEveningMedicines">Brak wieczornych leków</string>
    <string name="AddUpdatereminderInfo">Jeżeli chcesz zmienić lub dodać czas przypominajki kliknij na przycisk i wybierz godzinę</string>
    <string name="AlertIformationShortenData">Nowa data końcowa nie może być któtsza od daty rozpoczącia zażywania leku</string>
    <string name="TitleAlertNoData">Brak danych</string>
    <string name="AlertMessageChooseDataFirst">Najpierw należy wybrać datę</string>
    <string name="alertDialogMessageIncorectOfCount">Wpisz poprawną wartość ilości sztuk leku</string>
    <string name="AlertDialogMessageZeroVlue">Podana wartość musi być różna od zera</string>
    <string name="alertDialogMedExistsMessage">Wybrany lek o danej porze dnia już istnieje. Jeżeli chcesz edytować dawkę lub okres zażywania leku, przejdź do listy wszystkich leków</string>
</resources>
