<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".firstAidKitAllYourMedicines.addMedicine.ActivityAddMedicineFirstAidKit"
>


    <EditText android:layout_width="@dimen/widthOfEditTextAddMedicine"
              android:layout_height="@dimen/heightOfEditTextAddMedicine"
              android:background="@drawable/prostokat"
              android:hint="@string/ActivityAddMedicineActiveDose"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              android:id="@+id/Med_Active_Dose_editText"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_gravity="center_vertical" android:layout_marginTop="15dp"
              app:layout_constraintTop_toBottomOf="@+id/warm_informations_MedName" android:inputType="numberDecimal"/>

    <EditText android:layout_width="@dimen/widthOfEditTextAddMedicine"
              android:layout_height="@dimen/heightOfEditTextAddMedicine"
              android:background="@drawable/prostokat"
              android:hint="@string/ActivityAddMedicineWriteMedName"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="32dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_gravity="center_vertical"
              app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/Med_Name_editText"
              android:gravity="center"/>

    <EditText android:layout_width="@dimen/widthOfEditTextAddMedicine"
              android:layout_height="@dimen/heightOfEditTextAddMedicine"
              android:background="@drawable/prostokat"
              android:hint="@string/ActivityAddMedcineAddKind"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              android:id="@+id/Med_Kind_editText"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_gravity="center_vertical"
              android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/InformationActiveDose"/>

    <EditText android:layout_width="@dimen/widthOfEditTextAddMedicine"
              android:layout_height="@dimen/heightOfEditTextAddMedicine"
              android:background="@drawable/prostokat"
              android:hint="@string/ActivityAddMedicineWriteCount"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              android:id="@+id/Med_Count_editText"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_gravity="center_vertical"
              android:inputType="numberDecimal" android:layout_marginTop="15dp"
              app:layout_constraintTop_toBottomOf="@+id/warm_informations_MedKind"/>

    <EditText android:layout_width="@dimen/widthOfEditTextAddMedicine"
              android:layout_height="@dimen/heightOfEditTextAddMedicine"
              android:background="@drawable/prostokat"
              android:hint="@string/ActivityAddMedicineWriteDescription"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              android:id="@+id/Med_Description_editText"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_gravity="center_vertical" android:layout_marginTop="15dp"
              app:layout_constraintTop_toBottomOf="@+id/warm_informations_MedCount"/>
    <Button
            android:background="@drawable/savicon"
            android:layout_width="134dp"
            android:layout_height="169dp"
            android:id="@+id/MedSaveButton"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center_vertical"
            android:onClick="addMed"
            android:layout_marginEnd="52dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/warm_informations_MedName"
            android:hint="@string/ActivityAddMedicineNameInformation"
            android:visibility="visible" android:padding="3dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/Med_Name_editText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/warm_informations_MedKind"
            android:hint="@string/ActivityAddMedicineKidInformation"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center_vertical"
            android:visibility="visible" android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/Med_Kind_editText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/warm_informations_MedCount"
            android:hint="@string/ActivityAddMedicineTypeCountAttention"
            android:visibility="visible" android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/Med_Count_editText"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible" android:padding="3dp"
            android:hint="@string/ActivityActiveDoseInformation"
            android:id="@+id/InformationActiveDose"
            app:layout_constraintHorizontal_bias="0.556"
            app:layout_constraintTop_toBottomOf="@+id/Med_Active_Dose_editText"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible" android:padding="3dp"
            android:hint="@string/ActivityDescriptionInformation"
            android:id="@+id/ActivityDrscriptionInformation"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintTop_toBottomOf="@+id/Med_Description_editText"/>
    <Button
            android:background="@drawable/notifications"
            android:layout_width="142dp"
            android:layout_height="140dp"
            android:id="@+id/addMedicine_AddNotification"
            app:layout_constraintEnd_toStartOf="@+id/MedSaveButton"
            android:layout_marginEnd="8dp"
            android:onClick="downloadData"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="29dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.545"/>


</android.support.constraint.ConstraintLayout>