<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".takeMedicineOccur.showAllTakeMedicineOccur.ActivityShowAllTakeMedicineOccur">


    <TextView
            android:text="@string/ActivityEveningMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textiewMorning2" android:textStyle="bold|italic"
            android:textSize="18sp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyler_view_All_take_MedOccurMidday"/>
    <TextView
            android:text="@string/ActivityAfternoonMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textiewMorning" android:textStyle="bold|italic"
            android:textSize="18sp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyler_view_All_take_MedOccurMorning"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:id="@+id/recyler_view_All_take_MedOccurMorning"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/TextiewMorning"
    />

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:id="@+id/recyler_view_All_take_MedOccurMidday"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/textiewMorning"/>


    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:id="@+id/recyler_view_All_take_MedOccurEvening"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/textiewMorning2"
    />
    <TextView
            android:text="@string/ActivityMorningMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/TextiewMorning" android:textStyle="bold|italic"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="212dp"
            android:layout_height="99dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/textView_Topis_const"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Wszytskie twoje aktualne i planowane leki"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/TextiewMorning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textViewInformLackOfMorningMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAboutLackOfMorningMedicines"
            tools:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/recyler_view_All_take_MedOccurMorning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyler_view_All_take_MedOccurMorning" />

    <TextView
            android:id="@+id/textViewInformLackOfAfternoonMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAboutLackOfAfternoonMedicines"
            tools:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/recyler_view_All_take_MedOccurMidday"
            app:layout_constraintEnd_toEndOf="@+id/recyler_view_All_take_MedOccurMidday"
            app:layout_constraintStart_toStartOf="@+id/recyler_view_All_take_MedOccurMidday"
            app:layout_constraintTop_toTopOf="@+id/recyler_view_All_take_MedOccurMidday" />

    <TextView
            android:id="@+id/textViewInformLackOfEveningMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAboutLackOfEveningMedicines"
            tools:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/recyler_view_All_take_MedOccurEvening"
            app:layout_constraintEnd_toEndOf="@+id/recyler_view_All_take_MedOccurEvening"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyler_view_All_take_MedOccurEvening" />


</android.support.constraint.ConstraintLayout>