<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".todaysMedicines.showAllMedicinesToday.ShowAllTodaysMedicines">


    <TextView
            android:text="@string/ActivityEveningMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textiewEvening_const" android:textStyle="bold|italic"
            android:textSize="18sp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyler_view_All_take_Medicines_To_Take_Today_Midday"/>
    <TextView
            android:text="@string/ActivityAfternoonMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textiewAfternoon_const"
            android:textStyle="bold|italic"
            android:textSize="18sp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyler_view_All_Medicines_To_Take_Today_Morning"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:id="@+id/recyler_view_All_Medicines_To_Take_Today_Morning"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/TextiewMorning_const"
    />

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:id="@+id/recyler_view_All_take_Medicines_To_Take_Today_Midday"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/textiewAfternoon_const"/>


    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:id="@+id/recyler_view_All_take_Medicine_To_Take_Today_Evening"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/textiewEvening_const"
    />
    <TextView
            android:text="@string/ActivityMorningMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/TextiewMorning_const" android:textStyle="bold|italic"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView_appLogo"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="212dp"
            android:layout_height="99dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView_appLogo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="Leki na dziś"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Iformation_topic_const"
            android:textColor="@color/colorPrimary" android:textStyle="bold" android:textSize="26sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_appLogo" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"/>
    <TextView
            android:text="TextView"
            android:hint="Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_DataToday" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView_Iformation_topic_const" android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView_appLogo" android:layout_marginStart="8dp"
            android:layout_marginEnd="17dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"/>
    <Button
            android:layout_width="199dp"
            android:layout_height="71dp"
            android:id="@+id/button_GoToFirstAidKit"
            android:background="@drawable/buttongotofirstaidkit" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyler_view_All_take_Medicine_To_Take_Today_Evening"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

    <TextView
            android:id="@+id/textViewEveningMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAboutLackOfEveningMedicines"
            app:layout_constraintBottom_toBottomOf="@+id/recyler_view_All_take_Medicine_To_Take_Today_Evening"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyler_view_All_take_Medicine_To_Take_Today_Evening"
            tools:visibility="invisible" />

    <TextView
            android:id="@+id/textViewAfternoonMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAboutLackOfAfternoonMedicines"
            tools:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/recyler_view_All_take_Medicines_To_Take_Today_Midday"
            app:layout_constraintEnd_toEndOf="@+id/recyler_view_All_take_Medicines_To_Take_Today_Midday"
            app:layout_constraintStart_toStartOf="@+id/recyler_view_All_take_Medicines_To_Take_Today_Midday"
            app:layout_constraintTop_toTopOf="@+id/recyler_view_All_take_Medicines_To_Take_Today_Midday" />

    <TextView
            android:id="@+id/textViewMorningMedicines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAboutLackOfMorningMedicines"
            tools:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/recyler_view_All_Medicines_To_Take_Today_Morning"
            app:layout_constraintEnd_toEndOf="@+id/recyler_view_All_Medicines_To_Take_Today_Morning"
            app:layout_constraintStart_toStartOf="@+id/recyler_view_All_Medicines_To_Take_Today_Morning"
            app:layout_constraintTop_toTopOf="@+id/recyler_view_All_Medicines_To_Take_Today_Morning" />


</android.support.constraint.ConstraintLayout>